packages/scaml.1.2.0/tests/fail/view.ml
open SCaml

let [@view] view (a, contract_b) storage =
  [Operation.transfer_tokens storage (Tz 0.) contract_b],
  storage
